--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,29 +92,13 @@
 
             </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
-                android:text="Order Summary"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:textColor="@color/colorPrimary" />
-
-            <TextView
-                android:id="@+id/order_summary_text_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="16dp"
-                android:text="$0"
-                android:textAppearance="?android:textAppearanceMedium" />
 
             <Button
                 android:id="@+id/order_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="10dp"
                 android:onClick="submitOrder"
                 android:text="Order" />
 
